(about-us and services) upload

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,142 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="section section__bg--primary section__box-shadow">
+        <div class="container">
+            <h2 class="heading heading__2 heading__2--color-primary">
+                About Us
+            </h2>       
+            <div class="about-us">
+                <div class="row">
+                    <div class="cards card__about-us">
+                        <span class="numbering">1</span>
+                        <p class="paragraph paragraph__size--normal paragraph__color--secoundary">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley
+                        </p>
+                    </div>
+                    <div class="cards card__about-us">
+                        <span class="numbering">2</span>
+                        <p class="paragraph paragraph__size--normal paragraph__color--secoundary">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley
+                        </p>
+                    </div> 
+                    <div class="cards card__about-us">
+                        <span class="numbering">3</span>
+                        <p class="paragraph paragraph__size--normal paragraph__color--secoundary">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley
+                        </p>
+                    </div>                          
+                </div>
+                <div class="row">
+                    <div class="cards card__about-us">
+                        <span class="numbering">4</span>
+                        <p class="paragraph paragraph__size--normal paragraph__color--secoundary">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley
+                        </p>
+                    </div>
+                    <div class="cards card__about-us">
+                        <span class="numbering">5</span>
+                        <p class="paragraph paragraph__size--normal paragraph__color--secoundary">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley
+                        </p>
+                    </div> 
+                    <div class="cards card__about-us">
+                        <span class="numbering">6</span>
+                        <p class="paragraph paragraph__size--normal paragraph__color--secoundary">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley
+                        </p>
+                    </div>                          
+                </div>
+            </div> 
+            <div class="container">
+                <button class="button button__link">
+                    <span class="button button__link button__outline"></span>
+                    <label class="button button__text--primary">I need help</label>
+                </button>             
+            </div>
+        </div>
+    </div>
+    <div class="section section__bg--secondary">
+        <div class="container">
+            <h2 class="heading heading__2 heading__2--color-primary">
+                Services
+            </h2>            
+                <div class="row">
+                    <div class="cards card__services-container">
+                        <div class="cards card__services-image">
+                            <img src="/assets/images/service-image-clean.png" alt="sevice image">
+                        </div>
+                        <div class="cards card__service-description">
+                            <h5 class="heading heading__5 heading__5--color-black">
+                                Lorem Ipsum
+                            </h5>
+                            <p class="paragraph paragraph__size--normal paragraph__color--primary">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                  when an unknown printer took a galley of type and scrambled
+                            </p>
+                        </div>
+                    </div>  
+                    <div class="cards card__services-container">
+                        <div class="cards card__services-image">
+                            <img src="/assets/images/service-image-clean.png" alt="sevice image">
+                        </div>
+                        <div class="cards card__service-description">
+                            <h5 class="heading heading__5 heading__5--color-black">
+                                Lorem Ipsum
+                            </h5>
+                            <p class="paragraph paragraph__size--normal paragraph__color--primary">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                  when an unknown printer took a galley of type and scrambled
+                            </p>
+                        </div>
+                    </div>
+                    <div class="cards card__services-container">
+                        <div class="cards card__services-image">
+                            <img src="/assets/images/service-image-clean.png" alt="sevice image">
+                        </div>
+                        <div class="cards card__service-description">
+                            <h5 class="heading heading__5 heading__5--color-black">
+                                Lorem Ipsum
+                            </h5>
+                            <p class="paragraph paragraph__size--normal paragraph__color--primary">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                  when an unknown printer took a galley of type and scrambled
+                            </p>
+                        </div>
+                    </div>                  
+                </div>            
+            <div class="container">
+                <button class="button button__link">
+                    <span class="button button__link button__outline"></span>
+                    <label class="button button__text--primary">I need help</label>
+                </button>             
+            </div>
+        </div>
+    </div>
+
+
+    
     <h1>
         Hello World
     </h1>
     <img src="/assets/images/cat.jpeg" alt="" width="300">
-
-
+    
     <script src="/scripts.js"></script>
+
 </body>
 </html>
